# fmt_bnchmrk_legacy

./: CMakeLists.txt  README.md  main.cpp  run.sh  test_custom_code.cpp  test_fmt_compile_master.cpp  test_fmt_compile_master_noinline_removed_from_fill.cpp  test_fmt_compile_separate_formatter.cpp  test_fmt_compile_separate_formatter_noinline_removed_from_fill.cpp  test_functions.cpp  test_functions.hpp  test_stringstream.cpp  test_to_chars.cpp
fmt-fix-print_with_fmt_compile/include/fmt/: compile.h  format-inl.h  format.h
fmt/include/fmt/: compile.h  core.h  format.h
fmt_modified/: CMakeLists.txt
fmt_modified/include/fmt/: core.h  format.h
fmt_vanilla/: CMakeLists.txt
include/fmt_eef4ba9c02de46e5cce031db57268cc199c101fe/: compile.h  format.h
include/fmt_eef4ba9c02de46e5cce031db57268cc199c101fe_noinlined_removed_from_fill/: core.h  format.h
include/fmt_separate_formatter/: compile.h  format.h
include/fmt_separate_formatter_noinlined_removed_from_fill/: compile.h  format.h
